fix overflow

--- a/css/styles.css
+++ b/css/styles.css
@@ -1,3 +1,7 @@
+html,
+body {
+  overflow-x: hidden;
+}
 /* Header */
 
 .header-top {
@@ -851,5 +855,22 @@
   .col-md-6.bg-dark .row > .col-12.col-md-6:nth-child(2) h6 {
     font-size: 1.25rem;
     margin-bottom: 0.75rem;
+  }
+}
+@media (max-width: 767.98px) {
+  /* move the prev/next buttons in from the very edge */
+  .team-slider .slick-prev {
+    left: 10px !important;
+    /* if you need to bump it down/up: */
+    top: 50% !important;
+    transform: translateY(-50%) !important;
+    z-index: 2;
+  }
+
+  .team-slider .slick-next {
+    right: 10px !important;
+    top: 50% !important;
+    transform: translateY(-50%) !important;
+    z-index: 2;
   }
 }
